@@ -1,5 +1,10 @@
 Changes with Apache 2.0.44
 
+  *) Add the ProxyBadHeader directive, which gives the admin some
+     control on how mod_proxy should handle bogus HTTP headers from
+     proxied servers. This allows 2.0 to "emulate" 1.3's behavior if
+     desired. [Jim Jagielski]
+
   *) Change the LDAP modules to export their symbols correctly
      during a Windows build. Add dsp files for Windows. Update
      README.ldap file for Windows build instructions.
